@@ -1,5 +1,7 @@
 package net.ttddyy.dsproxy.proxy;
 
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.sql.SQLException;
 import java.sql.Wrapper;
 import java.util.Arrays;
@@ -56,6 +58,18 @@ public abstract class CallbackSupport {
      */
     protected boolean isGetTargetMethod(String methodName) {
         return GET_TARGET_METHOD.contains(methodName);
+    }
+
+
+    /**
+     * Invoke the method on target object.
+     */
+    protected Object proceedExecution(Method method, Object target, Object[] args) throws Throwable {
+        try {
+            return method.invoke(target, args);
+        } catch (InvocationTargetException ex) {
+            throw ex.getTargetException();
+        }
     }
 
 }
